@@ -1185,6 +1185,9 @@
 	<Manufacturer id="0000" name="Sigma Designs">
 		<Product type="0001" id="0001" name="UZB Z-Wave USB Adapter"/>
 	</Manufacturer>
+	<Manufacturer id="0267" name="Simon">
+		<Product type="0001" id="0000" name="Simon iO Switch" config="simon/10002034-13X.xml"/>
+	</Manufacturer>
 	<Manufacturer id="0045" name="Sine Wireless">
 	</Manufacturer>
 	<Manufacturer id="0070" name="Smart Products">
