@@ -1,0 +1,61 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- COMMAND_CLASS_SWITCH_MULTILEVEL. This class is in the list reported by the device, but it does not respond to requests -->
+    <CommandClass id="38" getsupported="false"/>
+    <!-- Configuration -->
+    <CommandClass id="112">
+        <Value type="list" genre="config" instance="1" index="9" label="Association LED" size="1" value="1" min="255" max="1">
+            <Help>
+				Used during Association process by Simon Shortcut Switch IO to turn ON the main LED of all devices already associated to this shortcut.
+			</Help>
+            <Item label="Turns the main LED OFF" value="0"/>
+            <Item label="Turns the main LED ON" value="255"/>
+        </Value>
+        <Value type="byte" genre="config" instance="1" index="10" label="Delay ON" value="0" min="0" max="254">
+            <Help>
+				This parameter allows to choose delay from activation request until load activation.
+				Value 0 - Instantly (default).
+				Values from 1 to 127 - 1 second to 127 seconds in 1 second resolution.
+				Values from 128 to 254 - 1 minute to 127 minutes in 1 minute resolution.
+			</Help>
+        </Value>
+        <Value type="byte" genre="config" instance="1" index="11" label="Activation Time" value="0" min="0" max="254">
+            <Help>
+				This parameter allows to chose the time that load performs activated after complete an activation process.
+				Value 0 - Instantly (default).
+				Values from 1 to 127 - 1 second to 127 seconds in 1 second resolution.
+				Values from 128 to 254 - 1 minute to 127 minutes in 1 minute resolution.
+			</Help>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="12" label="Behavior of LED in Repose" value="0" min="0" max="255" size="1">
+            <Help>This parameter allows to choose operating for Main LED as identification at 20%..</Help>
+            <Item label="LED OFF" value="0"/>
+            <Item label="LED ON at 20% of maximum level" value="255"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="13" label="Lock Input" value="0" min="0" max="255" size="1">
+            <Help>This parameter locks the pushbutton and wired input actions.</Help>
+            <Item label="Unlock the direct control of load" value="0"/>
+            <Item label="Lock the direct control of load" value="255"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="15" label="Reset Default" value="0" min="39015" max="39015" size="2" write_only="true">
+            <Help>Parameters, Groups, and Z-Wave status are restored to default (Only writable).</Help>
+            <Item label="Device performs a factory default Reset" value="39015"/>
+        </Value>
+        <Value type="byte" genre="config" instance="1" index="11" label="Activation Time" value="0" min="0" max="254">
+            <Help>
+				This parameter allows to chose the time that load performs activated after complete an activation process.
+				Value 0 - Instantly (default).
+				Values from 1 to 127 - 1 second to 127 seconds in 1 second resolution.
+				Values from 128 to 254 - 1 minute to 127 minutes in 1 minute resolution.
+			</Help>
+        </Value>
+    </CommandClass>
+    <!-- -->
+    <CommandClass id="96" mapping="endpoints"/>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="1">
+            <Group index="1" max_associations="3" label="Lifeline"/>
+        </Associations>
+    </CommandClass>
+</Product>
